--- a/index.html
+++ b/index.html
@@ -7,32 +7,34 @@
   <title>Calculator</title>
 </head>
 <body>
-  <section class="main-frame">
-    <div class = "monitor"></div>
-    <div class="buttons-set">
-      <button class = "cal-button light-button">AC</button>
-      <button class = "cal-button light-butto">&#x2b;/&#x2212;</button>
-      <button class = "cal-button light-butto">&#x25;</button>
-      <button class = "cal-button orange-button">&#xf7;</button>
-      <button class = "cal-button dark-button">7</button>
-      <button class = "cal-button dark-button">8</button>
-      <button class = "cal-button dark-button">9</button>
-      <button class = "cal-button orange-button">&#xd7;</button>
-      <button class = "cal-button dark-button">4</button>
-      <button class = "cal-button dark-button">5</button>
-      <button class = "cal-button dark-button">6</button>
-      <button class = "cal-button orange-button">&#x2212;</button>
-      <button class = "cal-button dark-button">1</button>
-      <button class = "cal-button dark-button">2</button>
-      <button class = "cal-button dark-button">3</button>
-      <button class = "cal-button orange-button">&#x2b;</button>
+  <main>
+    <section class="main-frame">
+      <div class = "monitor"></div>
+      <div class="buttons-set">
+        <button class = "cal-button light-button">AC</button>
+        <button class = "cal-button light-butto">&#x2b;/&#x2212;</button>
+        <button class = "cal-button light-butto">&#x25;</button>
+        <button class = "cal-button orange-button">&#xf7;</button>
+        <button class = "cal-button dark-button">7</button>
+        <button class = "cal-button dark-button">8</button>
+        <button class = "cal-button dark-button">9</button>
+        <button class = "cal-button orange-button">&#xd7;</button>
+        <button class = "cal-button dark-button">4</button>
+        <button class = "cal-button dark-button">5</button>
+        <button class = "cal-button dark-button">6</button>
+        <button class = "cal-button orange-button">&#x2212;</button>
+        <button class = "cal-button dark-button">1</button>
+        <button class = "cal-button dark-button">2</button>
+        <button class = "cal-button dark-button">3</button>
+        <button class = "cal-button orange-button">&#x2b;</button>
+    </div>
+    <div class="buttom-buttons">
+      <button class = "cal-button zero-button dark-button">0</button>
+      <button class = "cal-button dark-button">.</button>
+      <button class = "cal-button orange-button">&#x3d;</button>
   </div>
-  <div class="buttom-buttons">
-    <button class = "zero-button dark-button">0</button>
-    <button class = "cal-button dark-button">.</button>
-    <button class = "cal-button orange-button">&#x3d;</button>
-</div>
 
-  </section>
+    </section>
+  </main>
 </body>
 </html>
