--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <div class = "monitor"></div>
       <div class="buttons-set">
         <button class = "cal-button light-button">AC</button>
-        <button class = "cal-button light-butto">&#x2b;/&#x2212;</button>
-        <button class = "cal-button light-butto">&#x25;</button>
+        <button class = "cal-button light-button">&#x2b;/&#x2212;</button>
+        <button class = "cal-button light-button">&#x25;</button>
         <button class = "cal-button orange-button">&#xf7;</button>
         <button class = "cal-button dark-button">7</button>
         <button class = "cal-button dark-button">8</button>
